# ferrum-ai

./: .env.example  .gitignore  AGENT_PLATFORM_CONTEXT.md  CONTEXT.md  Cargo.toml  RAG_DIVULGATION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/gateway/: Cargo.toml
apps/gateway/migrations/: 0001_init.sql  0002_agent_mode.sql  0003_local_tooling.sql  0004_audited_runtime.sql  0005_skills_library.sql  0006_skill_assignments.sql  0007_local_model_marketplace.sql
apps/gateway/src/: agent_mode.rs  config.rs  curated_skills.rs  db.rs  error.rs  lib.rs  local_model_catalog.json  local_models.rs  main.rs  process.rs  routes.rs  state.rs
apps/web-lab/: index.html  package-lock.json  package.json  vite.config.ts
apps/web-lab/src/: AgentMode.tsx  App.tsx  McpRegistryScreen.tsx  ProvidersControlPlane.tsx  SkillsScreen.tsx  api.ts  styles.css  types.ts
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: commands.rs  lib.rs  models.rs  parser.rs
docs/architecture/: providers-local-model-marketplace-plan.md  skills-first-wave-catalog.md  skills-library-requirements.md
docs/runbooks/: gguf-import.md  local-startup.md  ollama-host-setup.md  providers-governance-check.md  quickstart.md  recovery-basics.md
