[workspace]
members = [
    "crates/orchestrator-core",
    "apps/gateway",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["http1", "json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
portable-pty = "0.9"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["chrono", "derive", "json", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
which = "8.0"
