[package]
name = "gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
orchestrator-core = { path = "../../crates/orchestrator-core" }
portable-pty.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
which.workspace = true
